--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="row ">
                 <div class="col-xs-12 banner">
                     <a class="logo" href="index.html">
-                        <img src="images/logo.png" alt="logo_Orinoco">
+                        <img src="images/logo.png" class="img-fluid" alt="logo_Orinoco">
                     </a>
                     <nav>
                         <ul>
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </header>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
                 <div id="products"></div> 
             </div>
