--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <nav>
                         <ul>
                             <li>
-                                <a href="#">Panier</a>
+                                <a href="./cart.html">Panier</a>
                             </li>
                         </ul>
                     </nav>
@@ -32,9 +32,9 @@
         </header>
     <section class="container">
         <div class="row">
-                <div id="products"></div> 
-            </div>
-        </section>
+                <div id="products"></div>
+        </div>
+    </section>
 
     <footer class="col-xs-12 banner">
         <button type="button" class="btn btn-dark">Contactez-nous</button>
