--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </header>
     <section class="container">
         <div class="row">
-                <div id="products"></div>
+                <div id="products">
+                    <a href="./product.html"></a>
+                </div>
         </div>
     </section>
 
